--- a/GenCore/GenCore/Views/Generation/Tables.cshtml
+++ b/GenCore/GenCore/Views/Generation/Tables.cshtml
@@ -5,6 +5,9 @@
 }
 
 <h2>Tables</h2>
+<p>
+    @Html.ActionLink("Download", "DownloadAllClass", "Generation", new { pCatalog = ViewBag.Catalog }, null)
+</p>
 
 <table class="table">
     <thead>
